Checking to make sure everything is updated

--- a/project3/index.html
+++ b/project3/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
 	<p id="word"></p>
-	<h1 id="count"></h1>
+	<!--Invisible character for clean html-->
+	<h1 id="count">&nbsp; </h1>
 	<div id="draw"></div>
 	<div id ="photobank">
 		<h1>Your Gallery!</h1>
